[gd_scene load_steps=6 format=4]

[ext_resource type="PackedScene" path="res://scenes/components/CaveBackground.tscn" id="1"]
[ext_resource type="Script" path="res://src/EndScreen.gd" id="2"]

[sub_resource type="Environment" id="Environment_victory"]
background_mode = 1
background_color = Color(0.1, 0.15, 0.2, 1)
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.8, 1.0, 1)
ambient_light_energy = 0.4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.4, 0.3, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.8, 0.6, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.6, 0.4, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 1.0, 0.8, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_secondary_button"]
bg_color = Color(0.3, 0.3, 0.4, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.7, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="CaveBackground" parent="." instance=ExtResource("1")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_victory")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0

[node name="VictoryTitle" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Heartspring Restored!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryMessage" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Echo's elemental essence has awakened the ancient power.
The first chamber glows with renewed life."
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="Celebration" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "✨ Well Done, Echo! ✨"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="UI/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="ButtonContainer" type="VBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="UI/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 45)
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Journey Again"

[node name="MainMenuButton" type="Button" parent="UI/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
theme_override_styles/normal = SubResource("StyleBoxFlat_secondary_button")
text = "Return to Start"

[node name="Stats" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
text = "Form switches: 0
Time: 00:00"
horizontal_alignment = 1

[connection signal="pressed" from="UI/VBoxContainer/ButtonContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"] 